WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82819
search field on Google.com does not have the AXSearchField subrole
https://bugs.webkit.org/show_bug.cgi?id=82819
Summary
search field on Google.com does not have the AXSearchField subrole
chris fleizach
Reported
2012-03-30 19:42:16 PDT
Search fields do not have the AXSubrole: AXSearchField
Attachments
patch
(7.33 KB, patch)
2012-03-31 00:33 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2012-03-31 00:33:05 PDT
Created
attachment 134948
[details]
patch
Darin Adler
Comment 2
2012-04-02 12:26:33 PDT
Comment on
attachment 134948
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134948&action=review
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:506 > + // Some websites don't label their search fields as search, so we should fallback to some heuristics.
This comment doesn’t explain why these heuristics are helpful. Nor why these heuristics are sufficient.
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:508 > + String nameAttribute = getAttribute(nameAttr);
const AtomicString& nameAttribute = fastGetAttribute(nameAttr);
> LayoutTests/platform/mac/accessibility/search-subrole-expected.txt:15 > +PASS nosearch.subrole is 'AXSubrole: '
Could use more coverage for the negative. For example, an element that is not in any form. Need coverage for the “not case sensitive” aspect. All these are all lowercase so the “false” for case sensitive is not tested at all.
chris fleizach
Comment 3
2012-04-03 00:16:00 PDT
http://trac.webkit.org/changeset/112989
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug