AX: search field on Google.com does not have the AXSearchField subrole https://bugs.webkit.org/show_bug.cgi?id=82819

Reviewed by Darin Adler.

Source/WebCore:

Detect search fields when possible for accessibility.

Test: platform/mac/accessibility/search-subrole.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isSearchField):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isSearchField):
(WebCore):
* accessibility/AccessibilityRenderObject.h:
(AccessibilityRenderObject):
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper subrole]):

LayoutTests:

* platform/mac/accessibility/search-subrole-expected.txt: Added.
* platform/mac/accessibility/search-subrole.html: Added.



Canonical link: https://commits.webkit.org/100346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112989 268f45cc-cd09-0410-ab3c-d52691b4dbfc